--- a/trunk/mscore/CMakeLists.txt
+++ b/trunk/mscore/CMakeLists.txt
@@ -36,7 +36,7 @@ set(BUILD_SCRIPTGEN TRUE)                 #Generate Qt script bindings. (collide
 set(USE_SSE     FALSE)
 set(SOUNDFONT3  TRUE)                     # enable ogg vorbis compressed fonts, require ogg & vorbis
 set(AEOLUS      TRUE)                     # pipe organ synthesizer
-set(OMR         FALSE)                    # optical music recognition
+set(OMR         TRUE)                    # optical music recognition
 set(EMBED_ICONS FALSE)                    # do not load icons from share/icons
 set(OSC        FALSE)                     # osc remote control
 
