--- a/trunk/mscore/CMakeLists.txt
+++ b/trunk/mscore/CMakeLists.txt
@@ -86,12 +86,13 @@ set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
 set(CMAKE_SKIP_RULE_DEPENDENCY TRUE)
 
 # The Mscore version number.
-SET(Mscore_VERSION_MAJOR  "1")
+SET(Mscore_VERSION_MAJOR  "2")
 SET(Mscore_VERSION_MINOR  "0")
 SET(Mscore_VERSION_PATCH  "0")
 
 SET(Mscore_VERSION       "${Mscore_VERSION_MAJOR}.${Mscore_VERSION_MINOR}")
-SET(Mscore_VERSION_FULL  "${Mscore_VERSION}.${Mscore_VERSION_PATCH}")
+#SET(Mscore_VERSION_FULL  "${Mscore_VERSION}.${Mscore_VERSION_PATCH}")
+SET(Mscore_VERSION_FULL  "${Mscore_VERSION}")
 
 if (MINGW OR APPLE)
   if(MINGW)
@@ -334,7 +335,7 @@ include (InstallRequiredSystemLibraries)
       # sure there is at least one set of four (4) backlasshes.
       SET(CPACK_PACKAGE_ICON "${PROJECT_SOURCE_DIR}/mscore/data\\\\installerhead.bmp")
       SET(CPACK_NSIS_INSTALLED_ICON_NAME "bin\\\\mscore.exe,0")
-      SET(CPACK_NSIS_DISPLAY_NAME "MuseScore ${Mscore_VERSION_MAJOR}.${Mscore_VERSION_MINOR}.${Mscore_VERSION_PATCH} MuseScore score typesetter")
+      SET(CPACK_NSIS_DISPLAY_NAME "MuseScore ${Mscore_VERSION_FULL} MuseScore score typesetter")
       SET(CPACK_NSIS_HELP_LINK "http://www.musescore.org/")
       SET(CPACK_NSIS_URL_INFO_ABOUT "http://www.musescore.org/")
       SET(CPACK_NSIS_CONTACT "ws@wschweer.de")
