--- a/mscore/share/templates/CMakeLists.txt
+++ b/mscore/share/templates/CMakeLists.txt
@@ -41,9 +41,9 @@ install(FILES
       Choir\ SATB\ with\ Piano.mscx
       Concert\ Band.mscx
       Hymn.mscz
-      leadsheet.mscx
+      Lead\ Sheet.mscx
       Piano.mscx
-      guitartab.mscx
+      Guitar\ Tab.mscx
       carol.mscx
       DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}templates
       )
